loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-service
  namespace: app
spec:
  type: LoadBalancer
  selector:
    app: static-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
